# openapi.yaml
@@ -2,39 +2,54 @@ openapi: 3.0.0
 info:
   title: Album API
   version: 1.0.0
-  description: ''
+  description: ""
 paths:
   /tags:
     get:
-      operationId: ''
+      operationId: ""
       summary: ListTags
       responses:
-        '200':
+        "200":
           description: 200 response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GetTagsResponse'
+                $ref: "#/components/schemas/GetTagsResponse"
             application/xml:
               schema:
                 type: object
                 properties: {}
-        '400':
+        "400":
           description: Bad Request
       description: Get all tags
     parameters: []
+  /tags/delete:
+    post:
+      operationId: ""
+      summary: DeleteTags
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+      description: ""
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/DeleteTagsRequest"
   /pictures:
     get:
-      operationId: ''
+      operationId: ""
       summary: ListPictures
       responses:
-        '200':
+        "200":
           description: 200 response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GetPicturesResponse'
-        '400':
+                $ref: "#/components/schemas/GetPicturesResponse"
+        "400":
           description: Bad Request
       description: List all pictures
       parameters:
@@ -50,19 +65,19 @@ paths:
     parameters: []
     post:
       summary: PostPicture
-      operationId: ''
+      operationId: ""
       responses:
-        '200':
+        "200":
           description: OK
-        '400':
+        "400":
           description: Bad Request
-      description: ''
+      description: ""
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PostPicturesRequest'
-  '/pictures/{id}':
+              $ref: "#/components/schemas/PostPicturesRequest"
+  "/pictures/{id}":
     parameters:
       - schema:
           type: string
@@ -73,33 +88,43 @@ paths:
       summary: PutPicture
       operationId: delete-pictures-id
       responses:
-        '200':
+        "200":
           description: OK
-        '400':
+        "400":
           description: Bad Request
     put:
       summary: PutPicture
       operationId: put-pictures-id
       responses:
-        '200':
+        "200":
           description: OK
-        '400':
+        "400":
           description: Bad Request
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PutPictureRequest'
-        description: ''
+              $ref: "#/components/schemas/PutPictureRequest"
+        description: ""
 components:
   schemas:
     GetTagsResponse:
       title: GetTagsResponse
       type: object
-      description: ''
+      description: ""
       properties:
         tags:
           type: array
+          description: List of tags
+          items:
+            type: string
+    DeleteTagsRequest:
+      title: DeleteTagsRequest
+      type: object
+      properties:
+        tags:
+          type: array
+          minItems: 1
           description: List of tags
           items:
             type: string
@@ -131,7 +156,7 @@ components:
           type: array
           description: List of pictures
           items:
-            $ref: '#/components/schemas/PicturesResponseItem'
+            $ref: "#/components/schemas/PicturesResponseItem"
     PicturesResponseItem:
       title: PicturesResponseItem
       type: object
