# openapi/openapi.gen.go
@@ -3,6 +3,13 @@
 // Code generated by github.com/deepmap/oapi-codegen DO NOT EDIT.
 package openapi
 
+// DeleteTagsRequest defines model for DeleteTagsRequest.
+type DeleteTagsRequest struct {
+
+	// List of tags
+	Tags *[]string `json:"tags,omitempty"`
+}
+
 // GetPicturesResponse defines model for GetPicturesResponse.
 type GetPicturesResponse struct {
 
@@ -66,8 +73,14 @@ type PostPicturesJSONBody PostPicturesRequest
 // PutPicturesIdJSONBody defines parameters for PutPicturesId.
 type PutPicturesIdJSONBody PutPictureRequest
 
+// PostTagsDeleteJSONBody defines parameters for PostTagsDelete.
+type PostTagsDeleteJSONBody DeleteTagsRequest
+
 // PostPicturesJSONRequestBody defines body for PostPictures for application/json ContentType.
 type PostPicturesJSONRequestBody PostPicturesJSONBody
 
 // PutPicturesIdJSONRequestBody defines body for PutPicturesId for application/json ContentType.
 type PutPicturesIdJSONRequestBody PutPicturesIdJSONBody
+
+// PostTagsDeleteJSONRequestBody defines body for PostTagsDelete for application/json ContentType.
+type PostTagsDeleteJSONRequestBody PostTagsDeleteJSONBody
